Fixes missing padding in gear container

--- a/src/scss/_actor-base.scss
+++ b/src/scss/_actor-base.scss
@@ -333,7 +333,7 @@
 
     //Summary
     .skills {
-      padding: 2px;
+      padding: $small-spacing;
       // Skills
       .skills-list {
         list-style: none;
@@ -343,6 +343,7 @@
     }
 
     .gear {
+      padding: $small-spacing;
       .gear-list {
         list-style: none;
         margin: 0;
